# ProiectPoo2

./: .gitignore  CMakeLists.txt  CalisthenicsExercise.cpp  CalisthenicsExercise.h  Exercise.cpp  Exercise.h  Menu.cpp  Menu.h  User.cpp  User.h  WeightExercise.cpp  WeightExercise.h  Workout.cpp  Workout.h
